<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:contentDescription="Logo"
            android:background="@color/app_background_theme"
            />

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First Name"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Last Name"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Address"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="City"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/editTextPostalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Postal Code"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/editTextCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Country"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/app_background_theme"/>

        <TextView
            android:id="@+id/textViewLoginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account? Login here"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/linkColor"
            />

    </LinearLayout>
</ScrollView>