<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerInfoActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#F7F7F7">
...
            android:textSize="16sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/name"
            android:layout_weight="0.6"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <!-- Delivery Address Section -->
    <TextView
...
            android:textSize="16sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/street"
            android:layout_weight="0.6"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <!-- City -->
...
            android:textSize="16sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/city"
            android:layout_weight="0.6"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <!-- Postal Code -->
...
            android:textSize="16sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/postal_code"
            android:layout_weight="0.6"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <!-- Contact Information Section -->
...
            android:textSize="16sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/phone"
            android:layout_weight="0.6"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <!-- Email -->
    <LinearLayout
...
            android:textSize="16sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/email"
            android:layout_weight="0.6"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <!-- Save Button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:text="Save"
        android:textColor="#FFFFFF"
        android:background="#002060"
        android:layout_gravity="center"
        android:id="@+id/saveCustomerInfoButton"/>

</LinearLayout>
