<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeliveryActivity"
    android:padding="16dp"
    android:orientation="vertical">

    <!-- Delivery Options -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Type of Delivery :"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_gravity="start"
        android:paddingTop="40dp"
        android:layout_marginBottom="12dp" />

    <RadioGroup
        android:id="@+id/deliveryOptionsGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <RadioButton
            android:id="@+id/rbDoorDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Door Delivery"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbPickUpLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pick-Up Location"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="8dp"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="#000000"
        android:layout_marginBottom="16dp"/>

    <ListView
        android:id="@+id/locationsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />


</LinearLayout>