<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Google Map Fragment -->
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Loading Indicator -->
    <LinearLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        android:background="#80000000">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="visible" />

        <TextView
            android:id="@+id/loadingMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please Wait! Loading Map..."
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_marginTop="12dp" />
    </LinearLayout>

    <!-- Button to toggle Map Type -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="#80000000"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnStandardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Standard"
            android:background="@color/app_background_theme"
           />

        <Button
            android:id="@+id/btnSatelliteView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Satellite"
            android:background="@color/app_background_theme"
            />

        <Button
            android:id="@+id/btnHybridView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Hybrid"
            android:background="@color/app_background_theme"
            />

        <Button
            android:id="@+id/btnSaveLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Save Location"
            android:background="@color/app_background_theme"
            />

    </LinearLayout>

</RelativeLayout>
